--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -12,20 +12,20 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" android:hardwareAccelerated="false">
-        <activity android:launchMode="singleTask" android:name="BootWin">
+        <activity android:launchMode="singleTask" android:name="BootWin" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:launchMode="singleTask" android:name=".win.WelcomeActivity"></activity>
-        <activity android:name=".win.MainWin" android:launchMode="singleTask">
+        <activity android:launchMode="singleTask" android:name=".win.WelcomeActivity" android:screenOrientation="portrait" android:configChanges="keyboardHidden|orientation"></activity>
+        <activity android:name=".win.MainWin" android:launchMode="singleTask" android:screenOrientation="portrait" android:configChanges="orientation">
             <intent-filter>
                 <action android:name="tao.app.agplan.main"/>
                 <category android:name="android.intent.category.HOME"/>
             </intent-filter>
         </activity>
-        <activity android:launchMode="singleTask" android:name=".win.NewTaskWin"></activity>
+        <activity android:launchMode="singleTask" android:name=".win.NewTaskWin" android:screenOrientation="portrait" android:configChanges="orientation"></activity>
     </application>
 
 </manifest>
