--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="24" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -26,6 +28,8 @@
             </intent-filter>
         </activity>
         <activity android:launchMode="singleTask" android:name=".win.NewTaskWin" android:screenOrientation="portrait" android:configChanges="orientation"></activity>
+        <activity android:name=".test.TestWin" android:launchMode="singleTask">
+        </activity>
     </application>
 
 </manifest>
